fixed overflow on body

--- a/assets/styles/layout.less
+++ b/assets/styles/layout.less
@@ -10,6 +10,7 @@ html, body {
   font-size: 14px;
   margin: 0;
   padding: 0;
+  overflow: auto;
 }
 
 // Header
